provide new person data to parent activity

--- a/app/src/main/res/layout/crowd_add_person.xml
+++ b/app/src/main/res/layout/crowd_add_person.xml
@@ -23,8 +23,8 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="339dp"
-            android:layout_height="wrap_content"
+            android:layout_width="271dp"
+            android:layout_height="match_parent"
             android:padding="16dp">
 
             <TextView
@@ -49,8 +49,9 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
-                android:inputType="textPersonName"
                 android:hint="@string/crowd.person_name"
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/crowd_add_title" />
 
@@ -60,16 +61,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:ems="10"
-                android:inputType="number"
                 android:hint="@string/crowd.person_age"
+                android:inputType="number"
                 app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
                 app:layout_constraintTop_toBottomOf="@+id/crowd_person_name" />
 
             <Switch
                 android:id="@+id/crowd_person_sex_switch"
-                android:layout_width="48dp"
-                android:layout_height="35dp"
+                android:layout_width="209dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
+                android:text="@string/crowd.person_male"
+                android:textOff="@string/crowd.person_female"
+                android:textOn="@string/crowd.person_male"
+                app:layout_constraintEnd_toEndOf="@+id/crowd_person_age"
                 app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
                 app:layout_constraintTop_toBottomOf="@+id/crowd_person_age" />
 
@@ -80,14 +86,14 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="8dp"
                 android:onClick="onSavePersonClicked"
                 android:text="@string/crowd.add.save"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/crowd_person_cancel"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
                 app:layout_constraintTop_toBottomOf="@+id/crowd_person_sex_switch"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -98,15 +104,14 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:onClick="onCancelAddCrowdClicked"
                 android:text="@string/crowd.add.cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/crowd_person_name"
                 app:layout_constraintHorizontal_bias="0.876"
                 app:layout_constraintStart_toEndOf="@+id/crowd_person_save"
-                app:layout_constraintTop_toBottomOf="@+id/crowd_person_sex_switch"
+                app:layout_constraintTop_toTopOf="@+id/crowd_person_save"
                 app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
