--- a/app/src/main/res/layout/crowd_add_person.xml
+++ b/app/src/main/res/layout/crowd_add_person.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/crowd_add_person_background"
@@ -12,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="120dp"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="3dp"
         app:cardElevation="0dp"
@@ -105,7 +108,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="8dp"
-                android:onClick="onCancelAddCrowdClicked"
+                android:onClick="onCancelAddPersonClicked"
                 android:text="@string/crowd.add.cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/crowd_person_name"
