--- a/app/src/main/res/layout/crowd_add_person.xml
+++ b/app/src/main/res/layout/crowd_add_person.xml
@@ -52,7 +52,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
-                android:hint="@string/crowd.person_name"
+                android:hint="@string/name"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:ems="10"
-                android:hint="@string/crowd.person_age"
+                android:hint="@string/age"
                 android:inputType="number"
                 app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
                 app:layout_constraintTop_toBottomOf="@+id/crowd_person_name" />
@@ -75,9 +75,9 @@
                 android:layout_height="24dp"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/crowd.person_male"
-                android:textOff="@string/crowd.person_female"
-                android:textOn="@string/crowd.person_male"
+                android:text="@string/male"
+                android:textOff="@string/female"
+                android:textOn="@string/male"
                 app:layout_constraintEnd_toEndOf="@+id/crowd_person_age"
                 app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
                 app:layout_constraintTop_toBottomOf="@+id/crowd_person_age" />
