--- a/app/src/main/res/layout/crowd_add_person.xml
+++ b/app/src/main/res/layout/crowd_add_person.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/crowd_add_person_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -93,7 +92,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="8dp"
                 android:onClick="onSavePersonClicked"
-                android:text="@string/crowd.add.save"
+                android:text="@string/add"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/crowd_person_cancel"
                 app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
@@ -109,7 +108,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="8dp"
                 android:onClick="onCancelAddPersonClicked"
-                android:text="@string/crowd.add.cancel"
+                android:text="@string/cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/crowd_person_name"
                 app:layout_constraintHorizontal_bias="0.876"
