--- a/app/src/main/res/layout/goods_add_product.xml
+++ b/app/src/main/res/layout/goods_add_product.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/goods_product_name" />
 
             <Button
-                android:id="@+id/crowd_person_save"
+                android:id="@+id/add_product_btn_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -77,7 +77,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/add_product_volume" />
 
             <Button
-                android:id="@+id/crowd_person_cancel"
+                android:id="@+id/add_product_btn_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -86,8 +86,8 @@
                 android:layout_marginStart="24dp"
                 android:onClick="onCancelAddProductClicked"
                 android:text="@string/cancel"
-                app:layout_constraintStart_toEndOf="@+id/crowd_person_save"
-                app:layout_constraintTop_toTopOf="@+id/crowd_person_save" />
+                app:layout_constraintStart_toEndOf="@+id/add_product_btn_save"
+                app:layout_constraintTop_toTopOf="@+id/add_product_btn_save" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
