--- a/app/src/main/res/layout/goods_item_popup.xml
+++ b/app/src/main/res/layout/goods_item_popup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/goods_add_product_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.GoodsAddWindow">
+    tools:context=".activity.GoodsItemWindow">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/goods_add_product_view_with_border"
@@ -72,7 +72,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="32dp"
                 android:onClick="onAddProductClicked"
-                android:text="@string/add"
+                android:text="@string/save"
                 app:layout_constraintStart_toStartOf="@+id/add_product_volume"
                 app:layout_constraintTop_toBottomOf="@+id/add_product_volume" />
 
