--- a/app/src/main/res/layout/activity_goods.xml
+++ b/app/src/main/res/layout/activity_goods.xml
@@ -10,9 +10,11 @@
         android:id="@+id/goods_add_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:text="@string/goods.add.title"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,16 +39,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.ar0ne.stoppiler.ui.SolidFontAwesomeTextView
         android:id="@+id/goods_add_btn_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:text="@string/remove.icon"
+        android:textSize="24sp"
+        android:padding="16dp"
         android:onClick="onBtnCloseClicked"
-        app:backgroundTint="#00FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
