--- a/app/src/main/res/layout/crowd_item.xml
+++ b/app/src/main/res/layout/crowd_item.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <ImageView
+        <com.ar0ne.stoppiler.ui.SolidFontAwesomeTextView
             android:id="@+id/person_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginStart="16dp"
+            android:padding="8dp"
+            android:textSize="32sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/person_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_alignParentTop="true"
+            android:layout_marginStart="24dp"
             android:layout_toEndOf="@+id/person_photo"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="@+id/person_photo"
+            app:layout_constraintStart_toEndOf="@+id/person_photo"
+            app:layout_constraintTop_toTopOf="@+id/person_photo" />
 
         <TextView
             android:id="@+id/person_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/person_name"
-            android:layout_toEndOf="@+id/person_photo" />
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@+id/person_photo"
+            app:layout_constraintBottom_toBottomOf="@+id/person_name"
+            app:layout_constraintStart_toEndOf="@+id/person_name" />
 
-        <TextView
-            android:id="@+id/person_sex"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/person_age"
-            android:layout_toEndOf="@+id/person_photo" />
-
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
