--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -45,18 +45,20 @@
             app:layout_constraintStart_toEndOf="@+id/product_name"
             app:layout_constraintTop_toTopOf="@+id/product_name" />
 
-        <ImageButton
+        <com.ar0ne.stoppiler.ui.SolidFontAwesomeTextView
             android:id="@+id/product_btn_remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="8dp"
+            android:textSize="24sp"
+            android:padding="16dp"
+            android:text="@string/remove.icon"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
