--- a/app/src/main/res/layout/activity_crowd.xml
+++ b/app/src/main/res/layout/activity_crowd.xml
@@ -38,9 +38,10 @@
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:onClick="onAddPersonClicked"
-        android:src="@android:drawable/ic_menu_add"
+        android:src="@drawable/ic_add_white_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@android:color/background_light" />
 
     <com.ar0ne.stoppiler.ui.SolidFontAwesomeTextView
         android:id="@+id/crowd_next"
