--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:text="@string/intro.title"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -22,10 +22,12 @@
 
     <TextView
         android:id="@+id/intro_text"
-        android:layout_width="320dp"
-        android:layout_height="421dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:padding="16sp"
         android:fontFamily="@font/roboto_thin"
         android:text="@string/intro.text"
         android:textSize="18sp"
