--- a/app/src/main/res/layout/crowd_add_person.xml
+++ b/app/src/main/res/layout/crowd_add_person.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/crowd_add_person_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -68,18 +69,41 @@
                 app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
                 app:layout_constraintTop_toBottomOf="@+id/crowd_person_name" />
 
+            <EditText
+                android:id="@+id/crowd_person_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:hint="@string/weight"
+                android:inputType="number"
+                app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
+                app:layout_constraintTop_toBottomOf="@+id/crowd_person_age" />
+
+            <EditText
+                android:id="@+id/crowd_person_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:ems="10"
+                android:hint="@string/height"
+                android:inputType="number"
+                app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
+                app:layout_constraintTop_toBottomOf="@+id/crowd_person_weight" />
+
             <Switch
                 android:id="@+id/crowd_person_sex_switch"
                 android:layout_width="209dp"
                 android:layout_height="24dp"
                 android:layout_marginStart="4dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="21dp"
                 android:text="@string/male"
                 android:textOff="@string/female"
                 android:textOn="@string/male"
                 app:layout_constraintEnd_toEndOf="@+id/crowd_person_age"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/crowd_person_name"
-                app:layout_constraintTop_toBottomOf="@+id/crowd_person_age" />
+                app:layout_constraintTop_toBottomOf="@+id/crowd_person_height" />
 
             <Button
                 android:id="@+id/crowd_person_save"
