--- a/app/src/main/res/layout/goods_item.xml
+++ b/app/src/main/res/layout/goods_item.xml
@@ -8,15 +8,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="8dp">
 
-        <ImageView
+        <com.ar0ne.stoppiler.ui.SolidFontAwesomeTextView
             android:id="@+id/product_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
+            android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,24 +27,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_toEndOf="@+id/product_photo"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/product_photo"
-            app:layout_constraintTop_toTopOf="@+id/product_photo"
             app:layout_constraintStart_toEndOf="@+id/product_photo"
-            />
+            app:layout_constraintTop_toTopOf="@+id/product_photo" />
 
         <TextView
             android:id="@+id/product_volume"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="8dp"
             android:layout_toEndOf="@+id/product_name"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/product_name"
-            app:layout_constraintTop_toTopOf="@+id/product_name" />
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/product_name"
+            app:layout_constraintTop_toBottomOf="@+id/product_name" />
 
         <com.ar0ne.stoppiler.ui.SolidFontAwesomeTextView
             android:id="@+id/product_btn_remove"
